--- a/app/src/main/res/layout/activity_4.xml
+++ b/app/src/main/res/layout/activity_4.xml
@@ -34,7 +34,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="328dp"
-        android:text="hhshs"
+        android:text=" "
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
