--- a/app/src/main/res/layout/activity_6.xml
+++ b/app/src/main/res/layout/activity_6.xml
@@ -6,19 +6,6 @@
     android:layout_height="match_parent"
     tools:context=".Activity6">
 
-    <Spinner
-        android:id="@+id/reservationSpinner"
-        android:layout_width="368dp"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <Button
         android:id="@+id/button6"
         android:layout_width="wrap_content"
@@ -27,11 +14,11 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="412dp"
+        android:layout_marginTop="24dp"
         android:text="Etsi"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/reservationSpinner" />
+        app:layout_constraintTop_toBottomOf="@+id/editDate" />
 
     <Spinner
         android:id="@+id/gymSpinner"
@@ -41,10 +28,10 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="276dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/reservationSpinner" />
+        app:layout_constraintTop_toBottomOf="@+id/simpleListView" />
 
     <EditText
         android:id="@+id/editDate"
@@ -54,11 +41,20 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="332dp"
+        android:layout_marginTop="28dp"
         android:ems="10"
         android:hint="Syötä päivä"
         android:inputType="date"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.503"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/reservationSpinner" />
+        app:layout_constraintTop_toBottomOf="@+id/gymSpinner" />
+
+    <ListView
+        android:id="@+id/simpleListView"
+        android:layout_width="368dp"
+        android:layout_height="260dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="8dp" />
 </android.support.constraint.ConstraintLayout>
